--- a/assets/scss/modules/_project-item.scss
+++ b/assets/scss/modules/_project-item.scss
@@ -14,6 +14,12 @@
 	p:last-of-type {
 		padding-bottom: ms(0);
 	}
+	.image-link {
+		background-image: none;
+	}
+	.image-link:hover {
+		background-image: none;
+	}
 	img {
 		padding-bottom: 1rem;
 		max-width: 100%;
